Added lighting and collision detection

--- a/game_jam.cbp
+++ b/game_jam.cbp
@@ -30,15 +30,29 @@
 		</Compiler>
 		<Unit filename="source/audio.cpp" />
 		<Unit filename="source/audio.h" />
+		<Unit filename="source/camera.cpp" />
 		<Unit filename="source/draw.cpp" />
 		<Unit filename="source/draw.h" />
+		<Unit filename="source/entity.cpp" />
+		<Unit filename="source/entity.h" />
+		<Unit filename="source/entity_rocket_drone.cpp" />
+		<Unit filename="source/ext/perlin.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="source/globals.cpp" />
 		<Unit filename="source/globals.h" />
+		<Unit filename="source/light.cpp" />
+		<Unit filename="source/light.h" />
 		<Unit filename="source/main.cpp" />
+		<Unit filename="source/map.cpp" />
+		<Unit filename="source/map.h" />
+		<Unit filename="source/player_controller.cpp" />
+		<Unit filename="source/player_controller.h" />
 		<Unit filename="source/resources.cpp" />
 		<Unit filename="source/resources.h" />
 		<Unit filename="source/state.cpp" />
 		<Unit filename="source/state.h" />
+		<Unit filename="source/state_game.cpp" />
 		<Unit filename="source/state_splash.cpp" />
 		<Unit filename="source/ui.cpp" />
 		<Unit filename="source/ui.h" />
